test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/void_condition_do_loop.plx
pub fn f(none) none {
    return none
}
pub fn main(none) i32 {
    i: i32 = false
    loop .. while f() {
        i = i + 1

    #  void expressions are non-scalar, so they can't be used as controlling conditions
    }
    return 0
}
